--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,4 +7,5 @@
         <input [(ngModel)]="hero.name" placehoder="name">
       </label>
     </div>
-      
+    <button (click)="goBack()">go back</button>
+</div>
